src/test/deca/syntax/invalid/resultats/test41_method-lex.res
'class': [@0,306:310='class',<7>,15:0]
IDENT: [@1,312:312='A',<26>,15:6]
'{': [@2,314:314='{',<36>,15:8]
IDENT: [@3,317:319='int',<26>,16:1]
IDENT: [@4,321:323='fct',<26>,16:5]
'(': [@5,324:324='(',<34>,16:8]
IDENT: [@6,325:327='int',<26>,16:9]
IDENT: [@7,329:329='a',<26>,16:13]
')': [@8,330:330=')',<35>,16:14]
'{': [@9,331:331='{',<36>,16:15]
IDENT: [@10,334:336='int',<26>,17:1]
IDENT: [@11,338:350='do_some_stuff',<26>,17:5]
'}': [@12,351:351='}',<37>,17:18]
'}': [@13,353:353='}',<37>,18:0]
